# FormWebsite

./: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  form.md  usercases.md
migrations/2021-12-02-145744_init/: down.sql  up.sql
src/: bot.rs  errors.rs  main.rs  models.rs  schema.rs  service_options.rs  user_token_service.rs  website.rs
src/repository/: mod.rs  user_token_repository.rs
src/website/: auth.rs  case_actions.rs  cases.rs  cors.rs  jwt.rs  mod.rs  person_jobs.rs  person_requirements.rs  person_skills.rs  persons.rs  users.rs
